# Sparse-VideoGen-Windows

svg/kernels/: CMakeLists.txt  setup.sh
svg/kernels/csrc/: ops.h
svg/kernels/include/rope/: rope_enc.cuh  rope_enc_txtlast.cuh
